--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,22 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+   background-color: #38A4DC;
+   color: white;
+   font-family: open sans;
+}
+
+#wrapper {
+   width: 600px;
+   height: 300px;
+   background-color:#9D9D9D;
+   position: absolute;
+   left: 400px;
+   top: 200px;
+   text-align: center;
+   overflow: auto;
+}
+
+
