--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
-<h1>Welcome, <%= @user.fname %>!</h1>
+<h1>Welcome, <%= @user.fname %>!</h1> 
+
+<!--check this over, for full name. I defined it in the models file but its throwing back an error that it can't use @ to reference model.-->
 
 <h2>Your Balance is $<%= @user.balance %> </h2>
 
