--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -1,3 +1,109 @@
 // Place all the styles related to the cards controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#cards {
+   width: 450px;
+   margin: 0 auto;
+   background-color: yellow;
+}
+
+
+.delete-card {
+   width: 40px;
+   height: 40px;
+   background-image:url("../delete.svg");
+   float: left;
+   margin-left: 40px;
+}
+
+.amex {
+   width: 350px;
+   height: 190px;
+   background-image:url("../americanexpress.jpg");
+   background-repeat: no-repeat;
+   float: left;
+   padding-bottom: 20px;
+}
+
+.amex .card-username {
+   color: black;
+   position: relative;
+   top: 150px;
+   left: 40px;
+   list-style: none;
+   float: left;
+}
+
+
+
+.amex .card-number {
+   color: black;
+   position: relative;
+   top: 150px;
+   left: 40px;
+   list-style: none;
+   float: left;
+   margin-left: 80px;
+}
+
+.visa {
+   width: 350px;
+   height: 190px;
+   background-image:url("../boa.jpg");
+   background-repeat: no-repeat;
+   float: left;
+   padding-bottom: 20px;
+}
+
+
+.visa .card-username {
+   color: white;
+   position: relative;
+   top: 12px;
+   left: 40px;
+   list-style: none;
+   float: left;
+}
+
+
+.visa .card-number {
+   color: white;
+   position: relative;
+   top: 150px;
+   right: 90px;
+   list-style: none;
+}
+
+
+.mastercard {
+   width: 350px;
+   height: 190px;
+   background-image:url("../master.jpg");
+   background-repeat: no-repeat;
+   float: left;
+   padding-bottom: 20px;
+}
+
+.mastercard .card-username {
+   color: white;
+   position: relative;
+   top: 12px;
+   left: 270px;
+   list-style: none;
+   float: left;
+}
+
+
+.mastercard .card-number {
+   color: white;
+   position: relative;
+   top: 150px;
+   right: 100px;
+   list-style: none;
+}
+
+
+.clear {
+   clear: both;
+}
