--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,23 +1,27 @@
-<h1> What's in your wallet? </h1>
+<h1> What's in your pocket? </h1>
 
 <div id='cards'>
 <% @cards.each do |card| %>
-  <div class="card">
-   <ul class='card-attributes'>
-        <li> <%= card.card_type %> </li>
-     <li>  <p> Experation Date: </p>  <%= card.exp_month %>, <%= card.exp_year %> </li>
-      </ul>
+  <div class="<%= "card #{card.card_type.downcase.gsub(/\s/,'')}"%>" >
+   <div class='card-attributes'>
+        <div class = "card-username">
+          <%= @user.fname %>  
+        </div>  
+          <div class = "card-number"
+            <li> <%= card.number %> 
+          </div>
    </div>
-
+  </div>
     <% if @user == current_user %>
-          <%= link_to( 'DELETE CARD', user_card_path(@user, card), method: :delete, data: { confirm: "You sure?" }) %>
+          <div > <%= link_to( '', user_card_path(@user, card), method: :delete, data: { confirm: "Do you want to delete?" }, class: "delete-card") %>
+          </div>
        <% else %>
 <% end %>
 
 <% end %>
 </div>
 
-
+<div class = "clear"> </div>
 
 <% if @user == current_user %>
    <%= link_to( 'Add New Card', new_user_card_path) %>
