--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -1,4 +1,5 @@
-<h1> Sign up </h2>
+<h2> This site is secure </h2>
+<h5> Please enter your <strong> REAL </strong> credit card information </h5>
 
 <% if @card.errors.full_messages.any? %>
   <ul>
