--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,20 +15,48 @@
  */
 
 body {
-   background-color: #38A4DC;
+   background-color: #4554A4;
    color: white;
    font-family: open sans;
+   margin: 0;
 }
 
 #wrapper {
-   width: 600px;
-   height: 300px;
-   background-color:#9D9D9D;
-   position: absolute;
-   left: 400px;
-   top: 200px;
+   padding-top: 0px;
+   width: 1200px;
+   margin: 0 auto;
    text-align: center;
-   overflow: auto;
 }
 
+#innerwrapper{
+   width: 800px;
+   margin: 0 auto;
+}
 
+a {
+   color: #C41D63;
+   font-size: 20px;
+}
+
+nav {
+   background-color: #38A4DC;
+   margin-top: 0px;  
+}
+
+nav li {
+   padding-right: 30px;
+   text-transform: uppercase;
+   word-spacing: 2.4px;
+   list-style: none;
+   display: inline-block;
+
+}
+
+nav a {
+text-decoration: none;
+color: white;
+}
+
+.clear {
+   clear: both;
+}
