--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+h1 {
+   font-size: 100px;
+}
+
+p {
+   text-decoration: none;
+}
+
+.profile-content {
+   text-align: left;
+   padding-left: 120px;
+}
