--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,5 +17,6 @@
   <%= f.password_field :password_confirmation, {placeholder: 'Confirm Password'} %>
 
   <%= f.number_field :balance, {placeholder: 'Account Balance'} %>
+  <%= f.file_field :avatar %>
   <%= f.submit :Submit, class: "form_button"%>
 <% end %>
