--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,16 @@
 <h1>Welcome, <%= @user.fname %>!</h1> 
-
+<%= image_tag @user.avatar.url %>
 <!--check this over, for full name. I defined it in the models file but its throwing back an error that it can't use @ to reference model.-->
 
-<h2>Your Balance is $<%= @user.balance %> </h2>
+<h2>Your Balance is $ <%= @user.balance %>0 </h2>
+
+   <div class = "profile-content">
+
+
 
 <h2> <%= link_to 'My Cards', user_cards_path(@user) %> </h2>
 
 <h2> <%= link_to 'Edit my profile', edit_user_path%> </h2>
+   </div>
+
+   
